[gd_scene load_steps=3 format=3 uid="uid://bc4x5cxd2gsu8"]

[ext_resource type="Script" path="res://HUD.gd" id="1_j0vwi"]
[ext_resource type="FontFile" uid="uid://de3yblluj0oq5" path="res://fonts/typo-round/Typo_Round_Bold_Italic_Demo.otf" id="2_dbkcp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_j0vwi")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -106.0
offset_right = 214.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dbkcp")
theme_override_font_sizes/font_size = 64
text = "tomagotchi :-)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -92.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_dbkcp")
theme_override_font_sizes/font_size = 64
text = "start !"

[node name="EndButton" type="Button" parent="."]
offset_left = 577.0
offset_top = 4.0
offset_right = 595.0
offset_bottom = 35.0
text = "X"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="EndButton" to="." method="show_game_over"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
